# biblearn

./: .gitignore  README.md  WebResources.md  pyproject.toml  requirements.txt  setup.py
experiments/initial-kjv-stats/: parse.py
experiments/initial-scrape/: initLook.py
src/: SWORD_Bibles.ipynb  data_view_app.py
src/biblearn/: sword.py
src/scrape/: bible_meta.txt  check.sh  format_json2csv.py  format_xml2json.sh  missing_verses.py  scrape.sh
